--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @LastEditors: zhang weijie
  * @Date: 2019-05-28 10:53:58
- * @LastEditTime: 2019-05-29 18:29:45
+ * @LastEditTime: 2019-05-31 10:22:15
  * @Description: 
  -->
 <!DOCTYPE html>
@@ -16,7 +16,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1215529_t7bsdqvwek.css" />
+        <!-- <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1215529_t7bsdqvwek.css" /> -->
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
